# marketing-pipeline

./: .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  context.md  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  dockerfile  melhorias.md  migrate_db.md  plan.md  prd.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy.yml
config/: airflow.cfg
dags/: _date_range.py  _extractor.py  _google_extractor.py  _google_queries.py  _retry.py  backfill_google_ads.py  backfill_meta_ads.py  daily_alerts.py  daily_extract_google_ads.py  daily_extract_google_ads_demographics.py  daily_extract_google_ads_keywords.py  daily_extract_meta_ads.py  daily_extract_meta_ads_demographics.py  daily_reports.py  daily_transform.py  google_ads.py  meta_ads.py
dags/callbacks/: discord_alert.py
dags/shared/: extractor.py  google_extractor.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/: sources.yml
deploy/backup/: Dockerfile  pg_backup.sh
deploy/infra-caddy/: Caddyfile.example  README.md  docker-compose.yaml
deploy/seed/: 01_managed_accounts.sql  02_client_budget.sql
docs/: BUSINESS_RULES.md  REQUIREMENTS.md  SDD.md
scripts/: backfill_google.py  create_api_key.py  deploy_vps.sh
sql/gold/: 01_gold_daily_performance.sql  (+4 more)
src/: db.py  loader.py
tests/: conftest.py  test_backfill_resilience.py  test_rn_auth.py  test_rn_budget_queries.py  test_rn_clientes.py  test_rn_dag_dates.py  test_rn_dates.py  test_rn_metrics.py  test_rn_review_flags.py  test_rn_review_queries.py  test_rn_users.py
(+66 files in other folders)
